# marshmallow-geojson

./: .coveragerc  .gitignore  .travis.yml  AUTHORS  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  tox.ini  tr.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: codecov.yml  main.yml  publish.yml
marshmallow_geojson/: __init__.py  _base.py  base.py  element.py  examples.py  feature.py  feature_collection.py  field.py  geojson.py  geometry.py  geometry_collection.py  line_string.py  multi_line_string.py  multi_point.py  multi_polygon.py  object_type.py  point.py  polygon.py  property.py  validate.py
marshmallow_geojson/schemas/: __init__.py  _base.py  base.py  feature.py  feature_collection.py  geometry_collection.py  line_string.py  multi_line_string.py  multi_point.py  multi_polygon.py  point.py  polygon.py
tests/: conftest.py  test_bbox.py  test_feature.py  test_feature_collection.py  test_geojson.py  test_geojson_schema_unique.py  test_geometry_collection.py  test_line_string.py  test_multi_line_string.py  test_multi_point.py  test_multi_polygon.py  test_object_type.py  test_point.py  test_polygon.py  test_type_mixing_validation.py  test_utils.py
