[tool.poetry]
name = "marshmallow_geojson"
version = "0.1.14"
description = "Marshmallow schema validation for GeoJson"
authors = [
  "Aliaksandr Vaskevich <vaskevic.an@gmail.com>",
]
license = "MIT"
readme = "README.rst"

homepage = "https://github.com/folt/marshmallow-geojson"
repository = "https://github.com/folt/marshmallow-geojson"
documentation = "https://github.com/folt/marshmallow-geojson"

keywords = [
  "marshmallow",
  "validation",
  "geojson",
  "schema",
  "gis",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: Implementation :: CPython",
  "License :: OSI Approved :: MIT License",
]


[tool.poetry.dependencies]
python = "^3.7"
marshmallow = "^3.8.0"
ujson = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.0"
pytest-cov = "^2.10.1"
tox = "^3.20.0"
tox-travis = "^0.12"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
