[tool.poetry]
name = "marshmallow_geojson"
version = "0.2.4"
description = "Marshmallow schema validation for GeoJson"
authors = [
  "Aliaksandr Vaskevich <vaskevic.an@gmail.com>",
]
license = "MIT"
readme = "README.rst"

homepage = "https://github.com/folt/marshmallow-geojson"
repository = "https://github.com/folt/marshmallow-geojson"
documentation = "https://github.com/folt/marshmallow-geojson"

keywords = [
  "marshmallow",
  "validation",
  "geojson",
  "schema",
  "gis",
  "geo",
  "json",
  "json-schema",
  "rest",
  "swagger",
  "openapi"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: Implementation :: CPython",
  "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.7"
marshmallow = "^3.8.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
pytest = "^6.1.0"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.flake8]
extend-ignore = """
    E203,
    E266,
    E501,
    E731,
    B903,
"""
max-line-length = 90
max-complexity = 18
